 # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 # IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 # FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 # AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.

cmake_minimum_required(VERSION 3.28)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED On)
set(CMAKE_CXX_EXTENSIONS Off)

add_definitions(-D_USE_MATH_DEFINES)

# set up external dependencies

add_subdirectory(Extern)

set(EXTERNAL_INCLUDES
    ${EXTERNAL_BOX2D_INCLUDE}
    ${EXTERNAL_GLFW_INCLUDE}
)

set(EXTERNAL_LIBRARIES
    ${EXTERNAL_BOX2D_LIBRARY}
    ${EXTERNAL_GLFW_LIBRARY}
)

find_package(OpenGL REQUIRED)

# set up project

project (shadow_pumpkin_caster)

add_subdirectory(IO)
add_subdirectory(UI)
add_subdirectory(GameControl)
