 # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 # IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 # FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 # AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.

add_library(user_interface STATIC
    menuButton.cpp
    menuPage.cpp
    pageLevelSelect.cpp
    pageMainMenu.cpp
    pageMissionSelect.cpp
)

include_directories(user_interface
    ${EXTERNAL_INCLUDES}
)

target_link_libraries(user_interface input_output)

target_include_directories(user_interface PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)
