 # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 # IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 # FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 # AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.

add_subdirectory(Intrinsic)
add_subdirectory(Composite)
add_subdirectory(Ammunition)
add_subdirectory(Enemies)

add_library(entities STATIC
    ${CORE_INTRINSIC_CXX}
    ${CORE_COMPOSITE_CXX}
    ${SPC_AMMO_CXX}
    ${SPC_ENEMY_CXX}
)

include_directories(entities
    ${EXTERNAL_INCLUDES}
)

target_link_libraries(entities input_output)

target_include_directories(entities PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CORE_INTRINSIC_DIR}
    ${CORE_COMPOSITE_DIR}
    ${SPC_AMMO_DIR}
    ${SPC_ENEMY_DIR}
)
