 # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 # IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 # FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 # AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.

add_library(missions STATIC
    ${CMAKE_CURRENT_SOURCE_DIR}/implementedMissions.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/mission.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/missionManager.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../player.cpp  # TODO move into better location
)

include_directories(missions
    ${EXTERNAL_INCLUDES}
)

target_include_directories(missions PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/..  # for player.h TODO move into better location
)

add_subdirectory(PumpkinPatch)

target_link_libraries(missions entities user_interface)
