 # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 # IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 # FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 # AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.

add_library(entities_spc_ammo STATIC
    ${CMAKE_CURRENT_SOURCE_DIR}/basicBomb.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/basicSolidShot.cpp
)

include_directories(entities_core_intrinsic
    ${EXTERNAL_INCLUDES}
)

target_include_directories(entities_spc_ammo PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(entities_spc_ammo entities_core_composite)
