 # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 # IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 # FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 # AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.

add_library(entities_core_composite STATIC
    ${CMAKE_CURRENT_SOURCE_DIR}/blockEntity.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/circleProjectileEntity.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/explosionParticle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/polygonProjectileEntity.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/targetEntity.cpp
)

include_directories(entities_core_composite
    ${EXTERNAL_INCLUDES}
)

target_include_directories(entities_core_composite PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(entities_core_composite entities_core_intrinsic)
