 # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 # IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 # FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 # AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.

add_library(entities_spc_enemy STATIC
    ${CMAKE_CURRENT_SOURCE_DIR}/ghost.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/gravestone.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/necromancer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/pumpkin.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/skeleton.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/spellCaster.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/vampire.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/witch.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Spells/necromancy.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Spells/restoration.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Spells/vampirism.cpp
)

include_directories(entities_core_intrinsic
    ${EXTERNAL_INCLUDES}
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Missions
)

target_include_directories(entities_spc_enemy PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/Spells
)

target_link_libraries(entities_spc_enemy entities_core_composite)
